dstaMainPage 데이터 전송

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,6 @@ thymeleaf:
 
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
-  configuration: map-underscore-to-camel-case:true
-
+  configuration:
+    map-underscore-to-camel-case: true
 
