--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
+	implementation 'org.jetbrains.annotations:annotations:23.0.0'
+	implementation 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
 }
 
 tasks.named('bootBuildImage') {
