댕뮤니티 백엔드 커밋 -mysql에서 다음 명령어 입력 (필요시 데이터 값도 입력) ALTER TABLE `dmunity` ADD COLUMN `dmunity_comments` INT

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/univ?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    username: user
-    password: 12341234
+    url: jdbc:mysql://localhost:3306/dUniv?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: jaeyun
+    password: 55815581
   http:
     encoding:
       force: true
