--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,6 @@ server:
   servlet:
     encoding:
       force-response: true
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
